# OSVR-Display

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  NOTICE  README.md  appveyor.yml
apps/: CMakeLists.txt  osvr_display.cpp  osvr_edid_vendor_id.cpp  osvr_print_displays.cpp
devtools/: travis-build.sh  travis-install-dependencies.sh
devtools/linux/: travis-install-osvr-core-minimal.sh
osvr/Display/: CMakeLists.txt  Display.cpp  Display.h  DisplayCommon_MacOSX.h  DisplayCommon_Windows.h  DisplayConfiguration.cpp  DisplayConfiguration.h  DisplayConfiguration_Linux.h  DisplayConfiguration_MacOSX.h  DisplayConfiguration_Windows.h  DisplayEnumerator.cpp  DisplayEnumerator.h  DisplayEnumerator_MacOSX.h  DisplayEnumerator_Windows.h  DisplayIO.h
test/: CMakeLists.txt
test/Display/: CMakeLists.txt  test_EdidVendorId.cpp  test_Orientation.cpp
